Added Client and Managed Client in ClientHierarchy for easy access. Moved all Classes to ClientHierarchy. Added AbstractPolicy changes.