@@ -5,7 +5,6 @@ import java.net.URI;
 import java.util.EnumMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Set;
 
 import org.jooq.types.ULong;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -33,6 +32,7 @@ import com.fincity.saas.commons.util.LogUtil;
 import com.fincity.security.dao.ClientDAO;
 import com.fincity.security.dao.appregistration.AppRegistrationDAO;
 import com.fincity.security.dto.Client;
+import com.fincity.security.dto.ClientHierarchy;
 import com.fincity.security.dto.Package;
 import com.fincity.security.dto.policy.AbstractPolicy;
 import com.fincity.security.enums.ClientLevelType;
@@ -59,15 +59,11 @@ public class ClientService
 	public static final String CACHE_NAME_CLIENT_URL = "clientUrl";
 	public static final String CACHE_NAME_CLIENT_URI = "uri";
 
-	private static final String CACHE_NAME_CLIENT_RELATION = "clientRelation";
 	private static final String CACHE_NAME_CLIENT_TYPE = "clientType";
 	private static final String CACHE_NAME_CLIENT_CODE = "clientCodeId";
-	private static final String CACHE_NAME_CLIENT_MANAGED = "clientManaged";
 	private static final String CACHE_NAME_CLIENT_INFO = "clientInfoById";
 	private static final String CACHE_NAME_MANAGED_CLIENT_INFO = "managedClientInfoById";
 	private static final String CACHE_NAME_CLIENT_ID = "clientId";
-
-	private static final String CLIENT_ID = "clientId";
 
 	private static final String ASSIGNED_PACKAGE = "Package is assigned to Client ";
 
@@ -89,6 +85,9 @@ public class ClientService
 
 	@Autowired
 	private AppRegistrationDAO appRegistrationDAO;
+
+	@Autowired
+	private ClientHierarchyService clientHierarchyService;
 
 	@Autowired
 	private ClientPasswordPolicyService clientPasswordPolicyService;
@@ -141,7 +140,7 @@ public class ClientService
 
 		return getClientPattern(uriScheme, uriHost, uriPort).map(ClientUrlPattern::getIdentifier)
 				.map(ULong::valueOf)
-				.defaultIfEmpty(ULong.valueOf(1l))
+				.defaultIfEmpty(ULong.valueOf(1L))
 				.flatMap(this::readInternal);
 	}
 
@@ -151,19 +150,14 @@ public class ClientService
 
 	public Mono<ClientUrlPattern> getClientPattern(String uriScheme, String uriHost, String uriPort) {
 
-		return cacheService.cacheValueOrGet(CACHE_NAME_CLIENT_URI, () -> {
-
-			String finHost = uriHost;
-
-			return this.readAllAsClientURLPattern()
-					.flatMapIterable(e -> e)
-					.filter(e -> e.isValidClientURLPattern(finHost, uriPort))
-					.take(1)
-					.collectList()
-					.flatMap(e -> e.isEmpty() ? Mono.empty() : Mono.just(e.get(0)))
-					.switchIfEmpty(Mono.defer(() -> getClientPatternBySubdomain(uriHost)));
-
-		}, uriScheme, uriHost, ":", uriPort);
+		return cacheService.cacheValueOrGet(CACHE_NAME_CLIENT_URI, () -> this.readAllAsClientURLPattern()
+				.flatMapIterable(e -> e)
+				.filter(e -> e.isValidClientURLPattern(uriHost, uriPort))
+				.take(1)
+				.collectList()
+				.flatMap(e -> e.isEmpty() ? Mono.empty() : Mono.just(e.getFirst()))
+				.switchIfEmpty(Mono.defer(() -> getClientPatternBySubdomain(uriHost))), uriScheme, uriHost, ":",
+				uriPort);
 	}
 
 	private Mono<? extends ClientUrlPattern> getClientPatternBySubdomain(String uriHost) {
@@ -189,26 +183,12 @@ public class ClientService
 	}
 
 	public Mono<List<ClientUrlPattern>> readAllAsClientURLPattern() {
-
 		return cacheService.cacheEmptyValueOrGet(CACHE_NAME_CLIENT_URL, () -> this.dao.readClientPatterns()
 				.collectList(), CACHE_CLIENT_URL_LIST);
 	}
 
-	public Mono<Set<ULong>> getPotentialClientList(ServerHttpRequest request) {
-
-		return this.getClientBy(request)
-				.map(Client::getId)
-				.flatMap(this::getPotentialClientList);
-	}
-
-	public Mono<Set<ULong>> getPotentialClientList(ULong id) {
-
-		return cacheService.cacheValueOrGet(CACHE_NAME_CLIENT_RELATION, () -> this.dao.findManagedClientList(id), id);
-	}
-
 	public Mono<Boolean> isBeingManagedBy(ULong managingClientId, ULong clientId) {
-		return cacheService.cacheValueOrGet(CACHE_NAME_CLIENT_MANAGED,
-				() -> this.dao.isBeingManagedBy(managingClientId, clientId), managingClientId, "-", clientId);
+		return this.clientHierarchyService.isBeingManagedBy(clientId, managingClientId);
 	}
 
 	@SuppressWarnings("unchecked")
@@ -217,21 +197,17 @@ public class ClientService
 
 		IPolicyService<T> policyService = (IPolicyService<T>) policyServices.get(passwordType);
 
-		return cacheService.cacheEmptyValueOrGet(policyService.getPolicyCacheName(),
-				() -> policyService.read(clientId, appId), clientId, appId);
+		return this.cacheService.cacheEmptyValueOrGet(policyService.getPolicyCacheName(),
+				() -> policyService.getClientAppPolicy(clientId, appId), clientId, appId);
 	}
 
 	public <T extends AbstractPolicy> Mono<T> getClientAppPolicy(ULong clientId, String appCode,
 			AuthenticationPasswordType passwordType) {
-
-		return FlatMapUtil.flatMapMono(
-				() -> appService.getAppByCode(appCode),
-				app -> getClientAppPolicy(clientId, app.getId(), passwordType));
+		return this.appService.getAppId(appCode).flatMap(appId -> getClientAppPolicy(clientId, appId, passwordType));
 	}
 
 	public Mono<Tuple2<String, String>> getClientTypeNCode(ULong id) {
-
-		return cacheService.cacheValueOrGet(CACHE_NAME_CLIENT_TYPE, () -> this.dao.getClientTypeNCode(id), id);
+		return this.cacheService.cacheValueOrGet(CACHE_NAME_CLIENT_TYPE, () -> this.dao.getClientTypeNCode(id), id);
 	}
 
 	@PreAuthorize("hasAuthority('Authorities.Client_CREATE')")
@@ -241,22 +217,12 @@ public class ClientService
 		return SecurityContextUtil.getUsersContextAuthentication()
 				.flatMap(ca -> super.create(entity).map(e -> {
 
-					if (!ca.isSystemClient()) {
-
-						ULong mClientId = ULongUtil.valueOf(ca.getUser()
-								.getClientId());
-						this.addManageRecord(mClientId, e.getId())
-								.flatMap(cacheService.evictFunction(CACHE_NAME_CLIENT_RELATION, e.getId()))
+					if (!ca.isSystemClient())
+						this.clientHierarchyService.create(ULongUtil.valueOf(ca.getUser().getClientId()), e.getId())
 								.subscribe();
-					}
 
 					return e;
 				}));
-	}
-
-	private Mono<Integer> addManageRecord(ULong manageClientId, ULong id) {
-
-		return this.dao.addManageRecord(manageClientId, id);
 	}
 
 	@PreAuthorize("hasAuthority('Authorities.Client_READ')")
@@ -302,7 +268,6 @@ public class ClientService
 				.flatMap(this::update)
 				.flatMap(e -> this.cacheService.evict(CACHE_NAME_CLIENT_INFO, id)
 						.flatMap(y -> this.cacheService.evict(CACHE_NAME_CLIENT_ID, id)))
-
 				.map(e -> 1);
 	}
 
@@ -318,7 +283,6 @@ public class ClientService
 
 	@Override
 	protected Mono<ULong> getLoggedInUserId() {
-
 		return SecurityContextUtil.getUsersContextUser()
 				.map(ContextUser::getId)
 				.map(ULong::valueOf);
@@ -351,53 +315,48 @@ public class ClientService
 
 	public Mono<Client> getManagedClientOfClientById(ULong clientId) {
 		return this.cacheService.cacheValueOrGet(CACHE_NAME_MANAGED_CLIENT_INFO,
-				() -> this.dao.getManagingClientId(clientId)
+				() -> this.clientHierarchyService.getManagingClient(clientId, ClientHierarchy.Level.ZERO)
 						.flatMap(this::getClientInfoById),
 				clientId);
-	}
-
-	public Mono<Boolean> checkClientHasPackage(ULong clientId, ULong packageId) {
-		return this.dao.checkPackageAssignedForClient(clientId, packageId);
 	}
 
 	@PreAuthorize("hasAuthority('Authorities.ASSIGN_Package_To_Client')")
 	public Mono<Boolean> assignPackageToClient(ULong clientId, ULong packageId) {
 
-		return this.dao.checkPackageAssignedForClient(clientId, packageId)
-				.flatMap(result -> {
-					if (result.booleanValue())
-						return Mono.just(true);
+		return this.dao.checkPackageAssignedForClient(clientId, packageId).flatMap(result -> {
+			if (Boolean.TRUE.equals(result))
+				return Mono.just(Boolean.TRUE);
 
-					return FlatMapUtil.flatMapMono(
+			return FlatMapUtil.flatMapMono(
 
-							SecurityContextUtil::getUsersContextAuthentication,
+					SecurityContextUtil::getUsersContextAuthentication,
 
-							ca -> this.dao.getPackage(packageId),
+					ca -> this.dao.getPackage(packageId),
 
-							(ca, packageRecord) -> BooleanUtil.safeValueOfWithEmpty(packageRecord.isBase()),
+					(ca, packageRecord) -> BooleanUtil.safeValueOfWithEmpty(packageRecord.isBase()),
 
-							(ca, packageRecord, basePackage) ->
+					(ca, packageRecord, basePackage) ->
 
-							ca.isSystemClient() ? Mono.just(true)
-									: checkClientAndPackageManaged(ULong.valueOf(ca.getUser()
-											.getClientId()), clientId, packageRecord.getClientId()),
+					ca.isSystemClient() ? Mono.just(Boolean.TRUE)
+							: checkClientAndPackageManaged(ULong.valueOf(ca.getUser().getClientId()), clientId,
+									packageRecord.getClientId()),
 
-							(ca, packageRecord, basePackage, isManaged) ->
+					(ca, packageRecord, basePackage, isManaged) ->
 
-							this.dao.addPackageToClient(clientId, packageId)
-									.map(e -> {
-										if (e.booleanValue())
-											super.assignLog(clientId, ASSIGNED_PACKAGE + packageId);
+					this.dao.addPackageToClient(clientId, packageId)
+							.map(e -> {
+								if (Boolean.TRUE.equals(e))
+									super.assignLog(clientId, ASSIGNED_PACKAGE + packageId);
 
-										return e;
-									})
+								return e;
+							})
 
-				).contextWrite(Context.of(LogUtil.METHOD_NAME, "ClientService.assignPackageToClient"))
-							.switchIfEmpty(securityMessageResourceService.throwMessage(
-									msg -> new GenericException(HttpStatus.FORBIDDEN, msg),
-									SecurityMessageResourceService.ASSIGN_PACKAGE_ERROR, packageId, clientId));
+			).contextWrite(Context.of(LogUtil.METHOD_NAME, "ClientService.assignPackageToClient"))
+					.switchIfEmpty(securityMessageResourceService.throwMessage(
+							msg -> new GenericException(HttpStatus.FORBIDDEN, msg),
+							SecurityMessageResourceService.ASSIGN_PACKAGE_ERROR, packageId, clientId));
 
-				});
+		});
 	}
 
 	public Mono<Boolean> hasPackageAccess(ULong clientId, ULong packageId) {
@@ -411,38 +370,17 @@ public class ClientService
 				(ca, pack) -> {
 
 					if (pack.isBase())
-						return Mono.just(true);
+						return Mono.just(Boolean.TRUE);
 
 					if (CommonsUtil.safeEquals(clientId, pack.getClientId()))
-						return Mono.just(true);
+						return Mono.just(Boolean.TRUE);
 
 					return this.dao.checkPackageAssignedForClient(clientId, packageId)
-							.flatMap(e -> e.booleanValue() ? Mono.just(true)
+							.flatMap(e -> Boolean.TRUE.equals(e) ? Mono.just(Boolean.TRUE)
 									: this.isBeingManagedBy(clientId, pack.getClientId()));
 				}
 
 		).contextWrite(Context.of(LogUtil.METHOD_NAME, "ClientService.hasPackageAccess"));
-	}
-
-	public Mono<Boolean> hasRoleAccess(ULong clientId, ULong roleId) {
-
-		return FlatMapUtil.flatMapMono(
-
-				SecurityContextUtil::getUsersContextAuthentication,
-
-				ca -> this.dao.getRole(roleId),
-
-				(ca, role) -> {
-
-					if (CommonsUtil.safeEquals(clientId, role.getClientId()))
-						return Mono.just(true);
-
-					return this.dao.checkRoleAssignedForClient(clientId, roleId)
-							.flatMap(e -> e.booleanValue() ? Mono.just(true)
-									: this.isBeingManagedBy(clientId, role.getClientId()));
-				}
-
-		).contextWrite(Context.of(LogUtil.METHOD_NAME, "ClientService.hasRoleAccess"));
 	}
 
 	private Mono<Boolean> checkClientAndPackageManaged(ULong loggedInClientId, ULong clientId, ULong packageClientId) {
@@ -462,15 +400,19 @@ public class ClientService
 	}
 
 	public Mono<Boolean> isBeingManagedBy(String managingClientCode, String clientCode) {
-		return this.dao.isBeingManagedBy(managingClientCode, clientCode);
+		return this.clientHierarchyService.isBeingManagedBy(managingClientCode, clientCode);
 	}
 
-	public Mono<Boolean> isUserBeingManaged(ULong userId, String clientCode) {
-		return this.dao.isUserBeingManaged(userId, clientCode);
+	public Mono<Boolean> isUserBeingManaged(String managingClientCode, ULong userId) {
+		return this.clientHierarchyService.isUserBeingManaged(managingClientCode, userId);
 	}
 
 	public Mono<Client> getClientBy(String clientCode) {
 		return cacheService.cacheValueOrGet(CACHE_NAME_CLIENT_CODE, () -> this.dao.getClientBy(clientCode), clientCode);
+	}
+
+	public Mono<ULong> getClientId(String clientCode) {
+		return this.getClientBy(clientCode).map(Client::getId);
 	}
 
 	public Mono<Boolean> checkRoleExistsOrCreatedForClient(ULong clientId, ULong roleId) {
@@ -480,52 +422,50 @@ public class ClientService
 	@PreAuthorize("hasAuthority('Authorities.ASSIGN_Package_To_Client')")
 	public Mono<Boolean> removePackageFromClient(ULong clientId, ULong packageId) {
 
-		return this.dao.checkPackageAssignedForClient(clientId, packageId)
-				.flatMap(result -> {
-					if (!result.booleanValue())
-						return securityMessageResourceService.throwMessage(
-								msg -> new GenericException(HttpStatus.NOT_FOUND, msg),
-								SecurityMessageResourceService.OBJECT_NOT_FOUND, clientId, packageId);
+		return this.dao.checkPackageAssignedForClient(clientId, packageId).flatMap(result -> {
+			if (Boolean.FALSE.equals(result))
+				return securityMessageResourceService.throwMessage(
+						msg -> new GenericException(HttpStatus.NOT_FOUND, msg),
+						SecurityMessageResourceService.OBJECT_NOT_FOUND, clientId, packageId);
 
-					return FlatMapUtil.flatMapMono(
+			return FlatMapUtil.flatMapMono(
 
-							SecurityContextUtil::getUsersContextAuthentication,
+					SecurityContextUtil::getUsersContextAuthentication,
 
-							ca -> ca.isSystemClient() ? Mono.just(true)
-									: this.isBeingManagedBy(ULong.valueOf(ca.getUser()
-											.getClientId()), clientId)
-											.flatMap(BooleanUtil::safeValueOfWithEmpty),
+					ca -> ca.isSystemClient() ? Mono.just(true)
+							: this.isBeingManagedBy(ULong.valueOf(ca.getUser().getClientId()), clientId)
+									.flatMap(BooleanUtil::safeValueOfWithEmpty),
 
-							(ca, sysOrManaged) -> this.packageService.getRolesFromPackage(packageId),
+					(ca, sysOrManaged) -> this.packageService.getRolesFromPackage(packageId),
 
-							(ca, sysOrManaged, roles) -> this.packageService.omitRolesFromBasePackage(roles),
+					(ca, sysOrManaged, roles) -> this.packageService.omitRolesFromBasePackage(roles),
 
-							(ca, sysOrManaged, roles, finalRoles) -> this.dao.findAndRemoveRolesFromUsers(finalRoles,
+					(ca, sysOrManaged, roles, finalRoles) -> this.dao.findAndRemoveRolesFromUsers(finalRoles,
+							packageId),
+
+					(ca, sysOrManaged, roles, finalRoles, rolesRemoved) -> this.packageService
+							.getPermissionsFromPackage(packageId, finalRoles),
+
+					(ca, sysOrManaged, roles, finalRoles, rolesRemoved, permissions) -> this.packageService
+							.omitPermissionsFromBasePackage(permissions),
+
+					(ca, sysOrManaged, roles, finalRoles, rolesRemoved, permissions,
+							finalPermissions) -> this.dao.findAndRemovePermissionsFromUsers(finalPermissions,
 									packageId),
 
-							(ca, sysOrManaged, roles, finalRoles, rolesRemoved) -> this.packageService
-									.getPermissionsFromPackage(packageId, finalRoles),
+					(ca, sysOrManaged, roles, finalRoles, rolesRemoved, permissions, finalPermissions,
+							rolesPermissionsRemoved) ->
 
-							(ca, sysOrManaged, roles, finalRoles, rolesRemoved, permissions) -> this.packageService
-									.omitPermissionsFromBasePackage(permissions),
+					this.dao.removePackage(clientId, packageId)
+							.map(e -> {
+								if (Boolean.TRUE.equals(e))
+									super.unAssignLog(packageId, UNASSIGNED_PACKAGE + clientId);
 
-							(ca, sysOrManaged, roles, finalRoles, rolesRemoved, permissions,
-									finalPermissions) -> this.dao.findAndRemovePermissionsFromUsers(finalPermissions,
-											packageId),
+								return e;
+							})
 
-							(ca, sysOrManaged, roles, finalRoles, rolesRemoved, permissions, finalPermissions,
-									rolesPermissionsRemoved) ->
-
-							this.dao.removePackage(clientId, packageId)
-									.map(e -> {
-										if (e.booleanValue())
-											super.unAssignLog(packageId, UNASSIGNED_PACKAGE + clientId);
-
-										return e;
-									})
-
-				).contextWrite(Context.of(LogUtil.METHOD_NAME, "ClientService.removePackageFromClient"));
-				})
+			).contextWrite(Context.of(LogUtil.METHOD_NAME, "ClientService.removePackageFromClient"));
+		})
 				.switchIfEmpty(securityMessageResourceService.throwMessage(
 						msg -> new GenericException(HttpStatus.FORBIDDEN, msg),
 						SecurityMessageResourceService.REMOVE_PACKAGE_ERR0R, packageId, clientId));
@@ -542,11 +482,11 @@ public class ClientService
 				ca -> Mono.just(CommonsUtil.nonNullValue(clientId, ULong.valueOf(ca.getUser()
 						.getClientId()))),
 
-				(ca, id) -> ca.isSystemClient() ? Mono.just(true)
-						: this.dao.isBeingManagedBy(ULong.valueOf(ca.getUser()
-								.getClientId()), id),
+				(ca, id) -> ca.isSystemClient() ? Mono.just(Boolean.TRUE)
+						: this.isBeingManagedBy(ULong.valueOf(ca.getUser().getClientId()), id),
 
-				(ca, id, sysOrManaged) -> sysOrManaged.booleanValue() ? this.dao.makeClientActiveIfInActive(clientId)
+				(ca, id, sysOrManaged) -> Boolean.TRUE.equals(sysOrManaged)
+						? this.dao.makeClientActiveIfInActive(clientId)
 						: Mono.empty())
 
 				.contextWrite(Context.of(LogUtil.METHOD_NAME, "ClientService.makeClientActiveIfInActive"))
@@ -566,11 +506,11 @@ public class ClientService
 				ca -> Mono.just(CommonsUtil.nonNullValue(clientId, ULong.valueOf(ca.getUser()
 						.getClientId()))),
 
-				(ca, id) -> ca.isSystemClient() ? Mono.just(true)
-						: this.dao.isBeingManagedBy(ULong.valueOf(ca.getUser()
+				(ca, id) -> ca.isSystemClient() ? Mono.just(Boolean.TRUE)
+						: this.isBeingManagedBy(ULong.valueOf(ca.getUser()
 								.getClientId()), id),
 
-				(ca, id, sysOrManaged) -> sysOrManaged.booleanValue() ? this.dao.makeClientInActive(clientId)
+				(ca, id, sysOrManaged) -> Boolean.TRUE.equals(sysOrManaged) ? this.dao.makeClientInActive(clientId)
 						: Mono.empty())
 				.contextWrite(Context.of(LogUtil.METHOD_NAME, "ClientService.makeClientIfInActive"))
 				.switchIfEmpty(this.securityMessageResourceService.throwMessage(
@@ -591,9 +531,8 @@ public class ClientService
 						: this.isBeingManagedBy(ULongUtil.valueOf(ca.getLoggedInFromClientId()), clientId)
 								.flatMap(BooleanUtil::safeValueOfWithEmpty),
 
-				(ca, sysOrManaged) -> this.dao.getPackagesAvailableForClient(clientId)
-
-		).contextWrite(Context.of(LogUtil.METHOD_NAME, "ClientService.fetchPackages"))
+				(ca, sysOrManaged) -> this.dao.getPackagesAvailableForClient(clientId))
+				.contextWrite(Context.of(LogUtil.METHOD_NAME, "ClientService.fetchPackages"))
 				.switchIfEmpty(securityMessageResourceService.throwMessage(
 						msg -> new GenericException(HttpStatus.FORBIDDEN, msg),
 						SecurityMessageResourceService.FETCH_PACKAGE_ERROR, clientId));
@@ -605,86 +544,24 @@ public class ClientService
 				"SYSTEM");
 	}
 
-	public Mono<ClientLevelType> getClientLevelType(ULong clientId, String appCode) {
-
-		return FlatMapUtil.flatMapMono(
-
-				() -> this.appService.getAppByCode(appCode),
-
-				app -> this.getClientLevelType(clientId, app.getId()))
-				.contextWrite(Context.of(LogUtil.METHOD_NAME, "ClientService.getClientLevelType(ULong,String)"));
-	}
-
-	public record LevelTypeReturnRecord(ClientLevelType type, Client client) {
-		public LevelTypeReturnRecord(ClientLevelType type) {
-			this(type, null);
-		}
-
-		public LevelTypeReturnRecord(Client client) {
-			this(null, client);
-		}
-	}
-
-	// Only four levels of the client type is fixed and any further will lead to
-	// confusion.
 	public Mono<ClientLevelType> getClientLevelType(ULong clientId, ULong appId) {
 
 		return FlatMapUtil.flatMapMono(
 
 				() -> this.appService.getAppById(appId),
 
-				app -> this.getClientInfoById(app.getClientId()),
+				app -> this.clientHierarchyService.getClientHierarchy(clientId),
 
-				(app, appClient) -> {
-					if (appClient.getId()
-							.equals(clientId))
-						return Mono.just(new LevelTypeReturnRecord(ClientLevelType.OWNER));
+				(app, clientHierarchy) -> {
+					if (app.getClientId().equals(clientId))
+						return Mono.just(ClientLevelType.OWNER);
 
-					return this.getManagedClientOfClientById(clientId).map(LevelTypeReturnRecord::new);
-				},
-
-				(app, appClient, first) -> {
-
-					if (first.type() != null)
-						return Mono.just(first);
-
-					if (first.client()
-							.getId()
-							.equals(appClient.getId()))
-						return Mono.just(new LevelTypeReturnRecord(ClientLevelType.CLIENT));
-
-					return this.getManagedClientOfClientById(first.client.getId())
-							.map(LevelTypeReturnRecord::new);
-				},
-
-				(app, appClient, first, second) -> {
-
-					if (second.type() != null)
-						return Mono.just(second);
-
-					if (second.client()
-							.getId()
-							.equals(appClient.getId()))
-						return Mono.just(new LevelTypeReturnRecord(ClientLevelType.CUSTOMER));
-
-					return this.getManagedClientOfClientById(second.client.getId())
-							.map(LevelTypeReturnRecord::new);
-				},
-
-				(app, appClient, first, second, third) -> {
-
-					if (third.type() != null)
-						return Mono.just(third);
-
-					if (third.client()
-							.getId()
-							.equals(appClient.getId()))
-						return Mono.just(new LevelTypeReturnRecord(ClientLevelType.CONSUMER));
-
-					return Mono.empty();
-				})
-				.map(LevelTypeReturnRecord::type)
-				.contextWrite(Context.of(LogUtil.METHOD_NAME, "ClientService.getClientLevelType(ULong,ULong)"));
+					return switch (clientHierarchy.getMaxLevel()) {
+						case ZERO -> Mono.just(ClientLevelType.CLIENT);
+						case ONE -> Mono.just(ClientLevelType.CUSTOMER);
+						case TWO, THREE -> Mono.just(ClientLevelType.CONSUMER);
+					};
+				}).contextWrite(Context.of(LogUtil.METHOD_NAME, "ClientService.getClientLevelType(ULong,ULong)"));
 	}
 
 	public Mono<Client> createForRegistration(Client client) {
